plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.meongnyangerang'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' } // JitPack 저장소 추가
}

dependencies {
	// Spring Boot 기본 의존성
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Data JPA & MySQL
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.mysql:mysql-connector-j'

	// Spring Security & JWT
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Elasticsearch
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// AWS S3
	implementation 'software.amazon.awssdk:s3:2.20.26'
	implementation 'software.amazon.awssdk:auth:2.20.26'
	implementation 'software.amazon.awssdk:regions:2.20.26'

	// Redis
//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Websocket
//	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Email (SMTP)
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Swagger (OpenAPI 3)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// OAuth2
//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// Port One (이니시스 결제 연동)
//	implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'

	// env
	implementation 'me.paulschwarz:spring-dotenv:3.0.0'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}